@@ -28,14 +28,9 @@
         <implements interface="eea.workflow.interfaces.IHasMandatoryWorkflowFields" />
     </class>
 
+    <adapter factory=".content.marshaller.CodesField2Surf" name="codes" />
+
     <adapter factory=".content.ExternalDataSpec.ExternalDataSpecThemes" />
-
-    <adapter factory=".content.Specification.Specification2Surf" />
-
-    <adapter for="eea.indicators.content.interfaces.IIndicatorFactSheet
-        eea.rdfmarshaller.interfaces.ISurfSession"
-        provides="eea.rdfmarshaller.interfaces.IArchetype2Surf"
-        factory=".content.Specification.Specification2Surf" />
 
     <adapter factory=".content.Assessment.ManagementPlanFieldValueProvider" />
 
