@@ -812,82 +812,3 @@ def make_id(BASE, names):
             x += 1
 
     return id_name
-
-
-class Specification2Surf(ATCT2Surf):
-    """ Specification2Surf """
-    adapts(ISpecification, ISurfSession)
-
-    def _schema2surf(self):
-        """overriden"""
-        context = self.context
-        resource = self.surfResource
-        language = context.Language()
-        for field in context.Schema().fields():
-            fieldName = field.getName()
-            if fieldName in self.blacklist_map:
-                continue
-            fieldAdapter = queryMultiAdapter((field, self.session),
-                                             interface=IATField2Surf)
-            if fieldAdapter.exportable:
-
-                try:
-                    value = fieldAdapter.value(context)
-                except TypeError:
-                    log.log('RDF marshaller error for context[field]'
-                            ' "%s[%s]": \n%s: %s' %
-                            (context.absolute_url(), fieldName,
-                             sys.exc_info()[0], sys.exc_info()[1]),
-                             severity=log.logging.WARN)
-                    continue
-
-                if (value and value != "None") or \
-                        (isinstance(value, basestring) and value.strip()):
-
-                    prefix = self.prefix
-
-                    #concatenate the codes field
-                    if fieldName == "codes":
-                        value = ["%s%s" % (v['set'], v['code'])
-                                 for v in value]
-
-                    if isinstance(value, (list, tuple)):
-                        value = list(value)
-                    elif isinstance(value, DateTime):
-                        value = (value.HTML4(), None,
-                                 'http://www.w3.org/2001/XMLSchema#dateTime')
-                    elif isinstance(value, unicode):
-                        pass
-                    else:
-                        try:
-                            value = (unicode(value,
-                                       getattr(sys.stdout, 'encoding', 'UTF-8'),
-                                       'replace'), language)
-                        except TypeError:
-                            value = str(value)
-
-                    if fieldName in self.field_map:
-                        fieldName = self.field_map.get(fieldName)
-                    elif fieldName in self.dc_map:
-                        fieldName = self.dc_map.get(fieldName)
-                        prefix = 'dcterms'
-
-                    try:
-                        setattr(resource, '%s_%s' %
-                                (prefix, fieldName), value)
-                    except Exception:
-                        log.log(('RDF marshaller error for context[field] '
-                                 '"%s[%s]": \n%s: %s') % (
-                                     context.absolute_url(),
-                                     fieldName, sys.exc_info()[0],
-                                     sys.exc_info()[1]),
-                                severity=log.logging.WARN)
-
-        parent = getattr(aq_inner(context), 'aq_parent', None)
-        if parent is not None:
-            resource.dcterms_isPartOf = rdflib.URIRef(parent.absolute_url())
-
-        resource.save()
-        return resource
-
-
